--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/img/weather.jpg">
+    <title>about</title>
 </head>
 <body>
-    <h1>{{title}}</h1>
-    <p>Created by {{name}}</p>
+    <div class="main-content">
+        {{>header}}
+        <img class="portrait" src="/img/photo.jpg" alt="unable to load image">
+    </div>
+
+    {{>footer}}
 </body>
 </html>
