add paragraph to about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,9 +8,11 @@
     <link rel="icon" href="/img/weather.jpg">
     <title>about</title>
 </head>
+
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site works together with http://api.weatherstack.com and https://api.mapbox.com. When any user enter a location , it returns weather of related location.</p>
         <img class="portrait" src="/img/photo.jpg" alt="unable to load image">
     </div>
 
